// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountWizardReducers should handle all defined error types: rejected types 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": true,
    "errorMessage": "ERROR",
    "errorStatus": 0,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": "",
    "stepArnValid": true,
    "stepPolicyErrorMessage": "",
    "stepPolicyValid": true,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_REJECTED",
}
`;

exports[`AccountWizardReducers should handle all defined error types: rejected types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_SYSTEM_CONFIG_REJECTED",
}
`;

exports[`AccountWizardReducers should handle all defined fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "account": Object {
      "lorem": "success",
    },
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": true,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_FULFILLED",
}
`;

exports[`AccountWizardReducers should handle all defined fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_SYSTEM_CONFIG_FULFILLED",
}
`;

exports[`AccountWizardReducers should handle all defined pending types: pending types 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": true,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_PENDING",
}
`;

exports[`AccountWizardReducers should handle all defined pending types: pending types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_SYSTEM_CONFIG_PENDING",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type ADD_ACCOUNT_SHOW 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": true,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_SHOW",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type ADD_ACCOUNT_WIZARD_STEP_ARN 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": true,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type ADD_ACCOUNT_WIZARD_STEP_POLICY 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": true,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type INVALID_ACCOUNT_WIZARD_STEP_ARN 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type INVALID_ACCOUNT_WIZARD_STEP_POLICY 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type UPDATE_ACCOUNT_HIDE 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "awsConfigAccountId": null,
    "awsConfigPolicySetup": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_HIDE",
}
`;
